# main.go
@@ -4,16 +4,15 @@ import (
 	"fmt"
 	"licor_model/core/server"
 	"licor_model/core/server/shared"
-	"net/http"
-
-	"github.com/MarceloPetrucio/go-scalar-api-reference"
 )
 
-// @title Minha API
-// @version 0.0.1
-// @description Documentação do melhor chatbot do mundo2
-// @host localhost:4000
+// @title Golang CHATBOT
+// @version @0.0.1
+// @description Documentação do melhor chatbot universitario
 // @BasePath /
+// @SecurityDefinitions.apikey Bearer Auth
+// @in header
+// @name Authorization
 func main() {
 
 	database, err := server.InitConnection()
@@ -23,25 +22,6 @@ func main() {
 	}
 	defer database.Close()
 	shared.SetDB(database)
-
-	http.HandleFunc("/docs", func(w http.ResponseWriter, r *http.Request) {
-		htmlContent, err := scalar.ApiReferenceHTML(&scalar.Options{
-			SpecURL: "./docs/swagger.json",
-			CustomOptions: scalar.CustomOptions{
-				PageTitle: "Chatbot swagger",
-			},
-			DarkMode: true,
-			Layout:   scalar.LayoutModern,
-			Theme:    scalar.ThemeMoon,
-		})
-
-		if err != nil {
-			fmt.Printf("%v", err)
-		}
-
-		fmt.Fprintln(w, htmlContent)
-	})
-
 	server.MainServer()
 
 }
